ADD_EXECUTABLE(intro intro.cpp)
ADD_EXECUTABLE(range-based-for range-based-for.cpp)
ADD_EXECUTABLE(constexpr constexpr.cpp)
ADD_EXECUTABLE(union union.cpp)
ADD_EXECUTABLE(lambda-transform lambda-transform.cpp)
ADD_EXECUTABLE(lambda lambda.cpp)
ADD_EXECUTABLE(copy-segfault copy-segfault.cpp)
ADD_EXECUTABLE(exitstatus exitstatus.c)
ADD_EXECUTABLE(point point.cpp)
ADD_EXECUTABLE(sensors-main sensors-main.cpp)
