ADD_EXECUTABLE(intro intro.cpp todolist.cpp todolist.h)
TARGET_LINK_LIBRARIES(intro Threads::Threads)

ADD_EXECUTABLE(range-based-for range-based-for.cpp)
ADD_EXECUTABLE(constexpr constexpr.cpp)
ADD_EXECUTABLE(union union.cpp)
ADD_EXECUTABLE(lambda-transform lambda-transform.cpp)
ADD_EXECUTABLE(lambda lambda.cpp)
ADD_EXECUTABLE(copy-segfault copy-segfault.cpp)
ADD_EXECUTABLE(exitstatus exitstatus.c)
ADD_EXECUTABLE(file-io file-io.cpp)
ADD_EXECUTABLE(point point.cpp)
ADD_EXECUTABLE(race-condition race-condition.cpp)
TARGET_LINK_LIBRARIES(race-condition Threads::Threads)
ADD_EXECUTABLE(race-condition-fixed-mutex race-condition-fixed-mutex.cpp)
TARGET_LINK_LIBRARIES(race-condition-fixed-mutex Threads::Threads)
ADD_EXECUTABLE(race-condition-fixed-atomic race-condition-fixed-atomic.cpp)
TARGET_LINK_LIBRARIES(race-condition-fixed-atomic Threads::Threads)
ADD_EXECUTABLE(increment increment.cpp)
ADD_EXECUTABLE(memleak memleak.cpp)
ADD_EXECUTABLE(auto auto.cpp)
ADD_EXECUTABLE(interfaces interfaces.cpp)
